Update .gitignore and improve OG image metadata

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   >
   <meta
     property="og:image"
-    content="https://placehold.co/1200x630/00bcd4/ffffff?text=Countdown+Service"
+    content="https://countdown-cni.pages.dev/og.jpg"
   >
   <meta
     property="og:url"
